--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "create-vite-querybook",
-  "version": "1.0.11",
+  "version": "1.0.12",
   "description": "Template generator of frontend pre-configured application React + Vite",
   "main": "lib/generator.js",
   "type": "module",
@@ -26,7 +26,7 @@
     "prettier",
     "pre-commit"
   ],
-  "author": "Pavel Kalinin",
+  "author": "Pavel Kalinin <pavelkalininn@gmail.com>",
   "license": "MIT",
   "dependencies": {
     "chalk": "^5.4.1",
