--- a/templates/basic/package.json
+++ b/templates/basic/package.json
@@ -21,7 +21,8 @@
     "type-check": "tsc -b --noEmit",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "build-storybook-docs": "storybook build --docs"
+    "build-storybook-docs": "storybook build --docs",
+    "generate": "npx @rtk-query/codegen-openapi ./codegen.ts"
   },
   "lint-staged": {
     "*": "prettier --ignore-unknown --write"
@@ -71,6 +72,8 @@
     "msw": "^2.7.4",
     "msw-storybook-addon": "^2.0.4",
     "prettier": "^3.5.3",
+    "@rtk-query/codegen-openapi": "^2.0.0",
+    "dotenv": "^16.5.0",
     "storybook": "^8.6.12",
     "typescript": "^5.8.2",
     "typescript-eslint": "^8.29.0",
