--- a/templates/basic/package.json
+++ b/templates/basic/package.json
@@ -34,7 +34,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^7.5.0"
+    "react-router-dom": "^7.5.0",
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.6",
@@ -55,6 +55,7 @@
     "@types/react": "^19.1.0",
     "@types/react-dom": "^19.1.1",
     "@typescript-eslint/eslint-plugin": "^8.31.0",
+    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@vitejs/plugin-react-swc": "^3.9.0",
     "@vitest/coverage-v8": "^3.1.1",
     "@vitest/eslint-plugin": "^1.1.42",
