--- a/templates/basic/package.json
+++ b/templates/basic/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vite-rtkq-husky-storybook",
   "private": true,
-  "version": "1.0.16",
+  "version": "1.0.17",
   "author": "Pavel Kalinin <pavelkalininn@gmail.com>",
   "type": "module",
   "scripts": {
@@ -34,7 +34,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^7.5.0",
+    "react-router-dom": "^7.5.0"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.6",
